crates/uitest/fixtures/ty_check/event_attr_on_non_struct.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/event_attr_on_non_struct.fe
---
error[12-0001]: unsupported `#[event]` attribute on fn `foo`
  ┌─ event_attr_on_non_struct.fe:1:1
  │
1 │ #[event]
  │ ^^^^^^^^ `#[event]` is only supported on structs
